Change to a URL-safe base64 encoder